--- a/style.css
+++ b/style.css
@@ -8,15 +8,26 @@
 body{
     background: linear-gradient(rgb(33, 151, 234), pink);
 }
+/* header */
 .logo{
    width: 120px ;
 }
 .navbar{
     background: linear-gradient(pink,rgb(8, 138, 231));
 }
+
+/* FORMULAIRE */
+.w-49{
+    width: 49% !important;
+}
+button .btn .btn-bg{
+    background: linear-gradient(rgb(22, 149, 240), pink); 
+}
+/* footer */
 footer{
     height: 120px!important;
     background: linear-gradient(rgb(22, 149, 240), pink);
     margin-top: 50px !important;
 }
+
 
